--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* General Styling */
 body {
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Helvetica', cursive;
     text-align: center;
     background-color: #ffebe8;
     color: #b30000;
